--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=server
+
+# Redis Configuration
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.redis.timeout=2000ms
+spring.redis.database=0
