--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,5 +1,17 @@
 spring.application.name=server
 
+# Database Configuration (matching k8s postgres setup)
+spring.datasource.url=jdbc:postgresql://localhost:5432/trackops
+spring.datasource.username=postgres
+spring.datasource.password=password
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# JPA/Hibernate Configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
+
 # Redis Configuration
 spring.redis.host=localhost
 spring.redis.port=6379
