--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -26,3 +26,18 @@ spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.Str
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+
+# Health Check Configuration
+management.endpoints.web.exposure.include=health,info,metrics,prometheus
+management.endpoint.health.show-details=always
+management.endpoint.health.show-components=always
+management.health.defaults.enabled=true
+management.health.db.enabled=true
+management.health.redis.enabled=true
+management.health.diskspace.enabled=true
+management.health.diskspace.threshold=100MB
+management.info.env.enabled=true
+management.info.java.enabled=true
+management.info.build.enabled=true
+management.metrics.export.prometheus.enabled=true
+management.metrics.tags.application=trackops-server
