--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -41,3 +41,7 @@ management.info.java.enabled=true
 management.info.build.enabled=true
 management.metrics.export.prometheus.enabled=true
 management.metrics.tags.application=trackops-server
+management.metrics.tags.environment=${SPRING_PROFILES_ACTIVE:default}
+management.metrics.distribution.percentiles-histogram.http.server.requests=true
+management.metrics.distribution.percentiles.http.server.requests=0.5,0.95,0.99
+management.metrics.distribution.sla.http.server.requests=10ms,50ms,100ms,200ms,500ms,1s,2s,5s
