--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -45,3 +45,20 @@ management.metrics.tags.environment=${SPRING_PROFILES_ACTIVE:default}
 management.metrics.distribution.percentiles-histogram.http.server.requests=true
 management.metrics.distribution.percentiles.http.server.requests=0.5,0.95,0.99
 management.metrics.distribution.sla.http.server.requests=10ms,50ms,100ms,200ms,500ms,1s,2s,5s
+
+# Logging Configuration
+logging.config=classpath:logback-spring.xml
+logging.level.com.trackops.server=INFO
+logging.level.org.springframework=WARN
+logging.level.org.springframework.web=WARN
+logging.level.org.springframework.security=WARN
+logging.level.org.springframework.kafka=WARN
+logging.level.org.springframework.data=WARN
+logging.level.org.hibernate=WARN
+logging.level.org.apache.kafka=WARN
+logging.level.io.lettuce=WARN
+logging.level.com.zaxxer.hikari=WARN
+
+# Log Path Configuration
+LOG_PATH=logs
+APP_VERSION=1.0.0
