--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=server
 
-# Database Configuration (matching k8s postgres setup)
-spring.datasource.url=jdbc:postgresql://postgres-service:5432/trackops
+# Database Configuration (local development)
+spring.datasource.url=jdbc:postgresql://localhost:5432/trackops
 spring.datasource.username=postgres
 spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -13,13 +13,13 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 
 # Redis Configuration
-spring.redis.host=redis-service
+spring.redis.host=localhost
 spring.redis.port=6379
 spring.redis.timeout=2000ms
 spring.redis.database=0
 
 # Kafka Configuration
-spring.kafka.bootstrap-servers=kafka:9092
+spring.kafka.bootstrap-servers=localhost:9092
 spring.kafka.consumer.group-id=trackops-orders
 spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
