--- a/prometheus-local.yml
+++ b/prometheus-local.yml
@@ -2,16 +2,21 @@ global:
   scrape_interval: 15s
   evaluation_interval: 15s
 
+rule_files:
+  # - "alert_rules.yml"
+
 scrape_configs:
-  # TrackOps Server (running locally)
+  # TrackOps Spring Boot Application
   - job_name: 'trackops-server'
     static_configs:
-      - targets: ['host.docker.internal:8080']
+      - targets: ['trackops-server:8080']
     metrics_path: '/actuator/prometheus'
     scrape_interval: 10s
     scrape_timeout: 5s
+    honor_labels: true
 
   # Prometheus itself
   - job_name: 'prometheus'
     static_configs:
       - targets: ['localhost:9090']
+    scrape_interval: 15s
