--- a/inventory-service/src/main/resources/application-docker.properties
+++ b/inventory-service/src/main/resources/application-docker.properties
@@ -1,25 +1,25 @@
 spring.application.name=inventory-service
 
-# Database Configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/trackops_inventory
+# Database Configuration (Docker)
+spring.datasource.url=jdbc:postgresql://postgres:5432/trackops_inventory
 spring.datasource.username=postgres
 spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA/Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.format_sql=false
 
-# Redis Configuration
-spring.redis.host=localhost
+# Redis Configuration (Docker)
+spring.redis.host=redis
 spring.redis.port=6379
 spring.redis.timeout=2000ms
 spring.redis.database=1
 
-# Kafka Configuration
-spring.kafka.bootstrap-servers=localhost:9092
+# Kafka Configuration (Docker)
+spring.kafka.bootstrap-servers=kafka:9092
 spring.kafka.consumer.group-id=inventory-service
 spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
@@ -41,7 +41,7 @@ management.info.java.enabled=true
 management.info.build.enabled=true
 management.metrics.export.prometheus.enabled=true
 management.metrics.tags.application=inventory-service
-management.metrics.tags.environment=${SPRING_PROFILES_ACTIVE:default}
+management.metrics.tags.environment=docker
 
 # Inventory Service Configuration
 inventory.service.retry.max-attempts=3
