--- a/event-relay-service/src/main/resources/application-docker.properties
+++ b/event-relay-service/src/main/resources/application-docker.properties
@@ -1,44 +1,46 @@
+# Docker Configuration for Event Relay Service
 spring.application.name=event-relay-service
 
-# Database Configuration (Docker - Order Service Database)
-spring.datasource.url=jdbc:postgresql://postgres:5432/trackops
+# Database Configuration - Event Relay Database
+spring.datasource.url=jdbc:postgresql://postgres-event-relay:5432/trackops_event_relay
 spring.datasource.username=postgres
 spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA/Hibernate Configuration
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.format_sql=false
+spring.jpa.properties.hibernate.format_sql=true
 
-# Kafka Configuration (Docker)
-spring.kafka.bootstrap-servers=kafka:9092
+# Redis Configuration
+spring.redis.host=redis
+spring.redis.port=6379
+spring.redis.timeout=2000ms
+spring.redis.database=2
+
+# Kafka Configuration
+spring.kafka.bootstrap-servers=kafka:29092
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.acks=all
 spring.kafka.producer.retries=3
 spring.kafka.producer.enable-idempotence=true
 
+# Event Relay Configuration
+event-relay.batch-size=10
+event-relay.max-retries=3
+event-relay.retry-delay=1000
+event-relay.polling-interval=5000
+event-relay.cleanup.enabled=true
+event-relay.cleanup.retention-hours=24
+
+# Server Configuration
+server.port=8083
+
 # Health Check Configuration
 management.endpoints.web.exposure.include=health,info,metrics,prometheus
 management.endpoint.health.show-details=always
-management.endpoint.health.show-components=always
 management.health.defaults.enabled=true
 management.health.db.enabled=true
-management.health.diskspace.enabled=true
-management.health.diskspace.threshold=100MB
-management.info.env.enabled=true
-management.info.java.enabled=true
-management.info.build.enabled=true
-management.metrics.export.prometheus.enabled=true
-management.metrics.tags.application=event-relay-service
-management.metrics.tags.environment=docker
-
-# Event Relay Configuration
-event-relay.batch-size=10
-event-relay.polling-interval=5000
-event-relay.max-retries=3
-event-relay.retry-delay=1000
-event-relay.cleanup.enabled=true
-event-relay.cleanup.retention-hours=24
+management.health.redis.enabled=true
