--- a/event-relay-service/src/main/resources/application.properties
+++ b/event-relay-service/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=event-relay-service
 
-# Database Configuration (Order Service Database)
-spring.datasource.url=jdbc:postgresql://localhost:5432/trackops
+# Database Configuration (Event Relay Database)
+spring.datasource.url=jdbc:postgresql://localhost:5434/trackops_event_relay
 spring.datasource.username=postgres
 spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -42,3 +42,6 @@ event-relay.max-retries=3
 event-relay.retry-delay=1000
 event-relay.cleanup.enabled=true
 event-relay.cleanup.retention-hours=24
+
+# Server Configuration
+server.port=8083
