--- a/inventory-service/src/main/resources/application-docker.properties
+++ b/inventory-service/src/main/resources/application-docker.properties
@@ -1,7 +1,8 @@
+# Docker Configuration for Inventory Service
 spring.application.name=inventory-service
 
-# Database Configuration (Docker)
-spring.datasource.url=jdbc:postgresql://postgres:5432/trackops_inventory
+# Database Configuration - Inventory Database
+spring.datasource.url=jdbc:postgresql://postgres-inventory:5432/trackops_inventory
 spring.datasource.username=postgres
 spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -10,16 +11,16 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.format_sql=false
+spring.jpa.properties.hibernate.format_sql=true
 
-# Redis Configuration (Docker)
+# Redis Configuration
 spring.redis.host=redis
 spring.redis.port=6379
 spring.redis.timeout=2000ms
 spring.redis.database=1
 
-# Kafka Configuration (Docker)
-spring.kafka.bootstrap-servers=kafka:9092
+# Kafka Configuration
+spring.kafka.bootstrap-servers=kafka:29092
 spring.kafka.consumer.group-id=inventory-service
 spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
@@ -27,23 +28,17 @@ spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.S
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
 
-# Health Check Configuration
-management.endpoints.web.exposure.include=health,info,metrics,prometheus
-management.endpoint.health.show-details=always
-management.endpoint.health.show-components=always
-management.health.defaults.enabled=true
-management.health.db.enabled=true
-management.health.redis.enabled=true
-management.health.diskspace.enabled=true
-management.health.diskspace.threshold=100MB
-management.info.env.enabled=true
-management.info.java.enabled=true
-management.info.build.enabled=true
-management.metrics.export.prometheus.enabled=true
-management.metrics.tags.application=inventory-service
-management.metrics.tags.environment=docker
-
 # Inventory Service Configuration
 inventory.service.retry.max-attempts=3
 inventory.service.retry.delay-ms=1000
 inventory.service.reservation.timeout-seconds=30
+
+# Server Configuration
+server.port=8082
+
+# Health Check Configuration
+management.endpoints.web.exposure.include=health,info,metrics,prometheus
+management.endpoint.health.show-details=always
+management.health.defaults.enabled=true
+management.health.db.enabled=true
+management.health.redis.enabled=true
