--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=server
 
 # Database Configuration (local development)
-spring.datasource.url=jdbc:postgresql://localhost:5432/trackops
+spring.datasource.url=jdbc:postgresql://localhost:5432/trackops_orders
 spring.datasource.username=postgres
 spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -26,6 +26,9 @@ spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.Str
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+
+# Server Configuration
+server.port=8081
 
 # Health Check Configuration
 management.endpoints.web.exposure.include=health,info,metrics,prometheus
