feat: implemented potential use of debezium

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -65,3 +65,13 @@ logging.level.com.zaxxer.hikari=WARN
 # Log Path Configuration
 LOG_PATH=logs
 APP_VERSION=1.0.0
+
+# Event Publishing Strategy Configuration
+# Options: 'outbox' (default) or 'debezium'
+app.event-publishing.strategy=outbox
+
+# Debezium Configuration (only used when strategy=debezium)
+app.debezium.enabled=false
+app.debezium.connector-url=http://localhost:8083/connectors
+app.debezium.topics.orders=trackops_orders.public.orders
+app.debezium.topics.order-items=trackops_orders.public.order_items
