--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -75,3 +75,12 @@ app.debezium.enabled=false
 app.debezium.connector-url=http://localhost:8083/connectors
 app.debezium.topics.orders=trackops_orders.public.orders
 app.debezium.topics.order-items=trackops_orders.public.order_items
+
+# Redis Cache Configuration
+app.cache.ttl.order=3600
+app.cache.ttl.status=1800
+app.cache.ttl.response=1800
+app.cache.ttl.customer=3600
+app.cache.ttl.page=900
+app.cache.warming.enabled=true
+app.cache.invalidation.enabled=true
