feat: implemented facttory + strategy pattern to choose between debezium and custom implementation with outbox pattern

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -68,7 +68,7 @@ APP_VERSION=1.0.0
 
 # Event Publishing Strategy Configuration
 # Options: 'outbox' (default) or 'debezium'
-app.event-publishing.strategy=outbox
+app.event-publishing.strategy=debezium
 
 # Debezium Configuration (only used when strategy=debezium)
 app.debezium.enabled=false
