feat: added DLQ (Dead letter queue)

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -71,7 +71,7 @@ APP_VERSION=1.0.0
 app.event-publishing.strategy=debezium
 
 # Debezium Configuration (only used when strategy=debezium)
-app.debezium.enabled=false
+app.debezium.enabled=true
 app.debezium.connector-url=http://localhost:8083/connectors
 app.debezium.topics.orders=trackops_orders.public.orders
 app.debezium.topics.order-items=trackops_orders.public.order_items
