chore: fixed port mismatches and config misconfiguations

--- a/docker/event-relay-service.yml
+++ b/docker/event-relay-service.yml
@@ -18,9 +18,9 @@ services:
       SPRING_DATASOURCE_PASSWORD: password
       SPRING_KAFKA_BOOTSTRAP_SERVERS: kafka:9092
     ports:
-      - "8082:8080"
+      - "${EVENT_RELAY_SERVICE_PORT:-8084}:8084"
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8080/actuator/health"]
+      test: ["CMD", "curl", "-f", "http://localhost:8084/actuator/health"]
       interval: 30s
       timeout: 10s
       retries: 5
