--- a/event-relay-service/src/main/resources/application-docker.properties
+++ b/event-relay-service/src/main/resources/application-docker.properties
@@ -2,9 +2,11 @@
 spring.application.name=event-relay-service
 
 # Database Configuration - Event Relay Database
-spring.datasource.url=jdbc:postgresql://postgres-event-relay:5432/trackops_event_relay
-spring.datasource.username=postgres
-spring.datasource.password=password
+# Can be overridden via SPRING_DATASOURCE_URL environment variable
+# For local development without Docker, use: localhost:5434
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://postgres-event-relay:5432/trackops_event_relay}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:postgres}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:password}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA/Hibernate Configuration
@@ -14,13 +16,17 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 
 # Redis Configuration
-spring.redis.host=redis
-spring.redis.port=6379
+# Can be overridden via SPRING_REDIS_HOST and SPRING_REDIS_PORT environment variables
+# For local development without Docker, use: localhost
+spring.redis.host=${SPRING_REDIS_HOST:redis}
+spring.redis.port=${SPRING_REDIS_PORT:6379}
 spring.redis.timeout=2000ms
 spring.redis.database=2
 
 # Kafka Configuration
-spring.kafka.bootstrap-servers=kafka:29092
+# Can be overridden via SPRING_KAFKA_BOOTSTRAP_SERVERS environment variable
+# For local development without Docker, use: localhost:9092
+spring.kafka.bootstrap-servers=${SPRING_KAFKA_BOOTSTRAP_SERVERS:kafka:29092}
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.acks=all
