feat: implemented statistics observations for service cache

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -31,7 +31,7 @@ spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.Str
 server.port=8081
 
 # Health Check Configuration
-management.endpoints.web.exposure.include=health,info,metrics,prometheus
+management.endpoints.web.exposure.include=health,info,metrics,prometheus,cache
 management.endpoint.health.show-details=always
 management.endpoint.health.show-components=always
 management.health.defaults.enabled=true
