--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -34,6 +34,7 @@ server.port=8081
 management.endpoints.web.exposure.include=health,info,metrics,prometheus,cache
 management.endpoint.health.show-details=always
 management.endpoint.health.show-components=always
+management.endpoint.cache.enabled=true
 management.health.defaults.enabled=true
 management.health.db.enabled=true
 management.health.redis.enabled=true
