fix: fixed cache statistics api endpoint

--- a/server/src/main/resources/application-docker.properties
+++ b/server/src/main/resources/application-docker.properties
@@ -32,9 +32,9 @@ spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.Str
 server.port=8081
 
 # Health Check Configuration
-management.endpoints.web.exposure.include=health,info,metrics,prometheus,cache
+management.endpoints.web.exposure.include=health,info,metrics,prometheus,caches
 management.endpoint.health.show-details=always
-management.endpoint.cache.enabled=true
+management.endpoint.caches.enabled=true
 management.health.defaults.enabled=true
 management.health.db.enabled=true
 management.health.redis.enabled=true
