--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -31,10 +31,10 @@ spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.Str
 server.port=8081
 
 # Health Check Configuration
-management.endpoints.web.exposure.include=health,info,metrics,prometheus,cache
+management.endpoints.web.exposure.include=health,info,metrics,prometheus,caches
 management.endpoint.health.show-details=always
 management.endpoint.health.show-components=always
-management.endpoint.cache.enabled=true
+management.endpoint.caches.enabled=true
 management.health.defaults.enabled=true
 management.health.db.enabled=true
 management.health.redis.enabled=true
@@ -49,6 +49,7 @@ management.metrics.tags.environment=${SPRING_PROFILES_ACTIVE:default}
 management.metrics.distribution.percentiles-histogram.http.server.requests=true
 management.metrics.distribution.percentiles.http.server.requests=0.5,0.95,0.99
 management.metrics.distribution.sla.http.server.requests=10ms,50ms,100ms,200ms,500ms,1s,2s,5s
+management.metrics.cache.enabled=true
 
 # Logging Configuration
 logging.config=classpath:logback-spring.xml
