--- a/docker/prometheus.yml
+++ b/docker/prometheus.yml
@@ -8,7 +8,7 @@ services:
     ports:
       - "9090:9090"
     volumes:
-      - ./prometheus-local.yml:/etc/prometheus/prometheus.yml:ro
+      - ./docker/prometheus-local.yml:/etc/prometheus/prometheus.yml:ro
       - prometheus_data:/prometheus
     command:
       - '--config.file=/etc/prometheus/prometheus.yml'
