--- a/k8s/all-services.yaml
+++ b/k8s/all-services.yaml
@@ -384,43 +384,7 @@ spec:
           name: redis-config
 
 ---
-# Zookeeper Deployment (required for Kafka)
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: zookeeper
-  labels:
-    app: zookeeper
-spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app: zookeeper
-  template:
-    metadata:
-      labels:
-        app: zookeeper
-    spec:
-      containers:
-      - name: zookeeper
-        image: confluentinc/cp-zookeeper:7.4.0
-        ports:
-        - containerPort: 2181
-        env:
-        - name: ZOOKEEPER_CLIENT_PORT
-          value: "2181"
-        - name: ZOOKEEPER_TICK_TIME
-          value: "2000"
-        resources:
-          requests:
-            memory: "256Mi"
-            cpu: "100m"
-          limits:
-            memory: "512Mi"
-            cpu: "200m"
-
----
-# Kafka Deployment
+# Kafka Deployment (KRaft mode - no ZooKeeper required)
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -439,16 +403,31 @@ spec:
     spec:
       containers:
       - name: kafka
-        image: confluentinc/cp-kafka:7.4.0
+        image: confluentinc/cp-kafka:8.0
         ports:
         - containerPort: 9092
+        - containerPort: 9093
         env:
-        - name: KAFKA_BROKER_ID
-          value: "1"
-        - name: KAFKA_ZOOKEEPER_CONNECT
-          value: "zookeeper:2181"
+        # KRaft Configuration
+        - name: KAFKA_PROCESS_ROLES
+          value: "broker,controller"
+        - name: KAFKA_CONTROLLER_QUORUM_VOTERS
+          value: "1@localhost:9093"
+        - name: KAFKA_LISTENERS
+          value: "PLAINTEXT://:9092,CONTROLLER://:9093"
         - name: KAFKA_ADVERTISED_LISTENERS
           value: "PLAINTEXT://kafka:9092"
+        - name: KAFKA_CONTROLLER_LISTENER_NAMES
+          value: "CONTROLLER"
+        - name: KAFKA_LISTENER_SECURITY_PROTOCOL_MAP
+          value: "CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT"
+        - name: KAFKA_INTER_BROKER_LISTENER_NAME
+          value: "PLAINTEXT"
+        - name: KAFKA_NODE_ID
+          value: "1"
+        - name: CLUSTER_ID
+          value: "MkU3OEVBNTcwNTJENDM2Qk"
+        # Topic Configuration
         - name: KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR
           value: "1"
         - name: KAFKA_TRANSACTION_STATE_LOG_MIN_ISR
@@ -457,6 +436,8 @@ spec:
           value: "1"
         - name: KAFKA_AUTO_CREATE_TOPICS_ENABLE
           value: "true"
+        - name: KAFKA_LOG_DIRS
+          value: "/var/lib/kafka/data"
         resources:
           requests:
             memory: "512Mi"
@@ -516,23 +497,6 @@ spec:
   type: ClusterIP
 
 ---
-# Zookeeper Service
-apiVersion: v1
-kind: Service
-metadata:
-  name: zookeeper
-  labels:
-    app: zookeeper
-spec:
-  selector:
-    app: zookeeper
-  ports:
-  - port: 2181
-    targetPort: 2181
-    protocol: TCP
-  type: ClusterIP
-
----
 # Kafka Service
 apiVersion: v1
 kind: Service
@@ -547,6 +511,11 @@ spec:
   - port: 9092
     targetPort: 9092
     protocol: TCP
+    name: broker
+  - port: 9093
+    targetPort: 9093
+    protocol: TCP
+    name: controller
   type: ClusterIP
 
 ---
