feat: implemented confluence schema registry tto prevent serialization errors with kafka pipeline

--- a/docker/inventory-service.yml
+++ b/docker/inventory-service.yml
@@ -1,26 +1,18 @@
-version: '3.8'
-
 services:
   inventory-service:
     build:
       context: ../inventory-service
       dockerfile: Dockerfile
     container_name: trackops-inventory-service
-    depends_on:
-      postgres:
-        condition: service_healthy
-      kafka:
-        condition: service_healthy
-      redis:
-        condition: service_healthy
     environment:
       SPRING_PROFILES_ACTIVE: docker
-      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/trackops_inventory
+      SPRING_DATASOURCE_URL: jdbc:postgresql://trackops-postgres-inventory:5432/trackops_inventory
       SPRING_DATASOURCE_USERNAME: postgres
       SPRING_DATASOURCE_PASSWORD: password
-      SPRING_KAFKA_BOOTSTRAP_SERVERS: kafka:9092
+      SPRING_KAFKA_BOOTSTRAP_SERVERS: trackops-kafka:29092
       SPRING_REDIS_HOST: redis
       SPRING_REDIS_PORT: 6379
+      SCHEMA_REGISTRY_URL: http://schema-registry:8081
     ports:
       - "8082:8082"
     healthcheck:
@@ -32,3 +24,7 @@ services:
     networks:
       - trackops-network
     restart: unless-stopped
+
+networks:
+  trackops-network:
+    external: true
