--- a/server/src/main/resources/application-docker.properties
+++ b/server/src/main/resources/application-docker.properties
@@ -28,6 +28,13 @@ spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.S
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
 
+# Schema Registry Configuration
+schema.registry.url=http://schema-registry:8081
+schema.registry.basic.auth.user.info=${SCHEMA_REGISTRY_BASIC_AUTH_USER_INFO:}
+schema.registry.cache.capacity=1000
+schema.registry.auto.register.schemas=true
+schema.registry.compatibility.level=BACKWARD
+
 # Server Configuration
 server.port=8081
 
