--- a/docker/event-relay-service.yml
+++ b/docker/event-relay-service.yml
@@ -1,22 +1,16 @@
-version: '3.8'
-
 services:
   event-relay-service:
     build:
       context: ../event-relay-service
       dockerfile: Dockerfile
     container_name: trackops-event-relay-service
-    depends_on:
-      postgres:
-        condition: service_healthy
-      kafka:
-        condition: service_healthy
     environment:
       SPRING_PROFILES_ACTIVE: docker
-      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/trackops
+      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres-event-relay:5432/trackops_event_relay
       SPRING_DATASOURCE_USERNAME: postgres
       SPRING_DATASOURCE_PASSWORD: password
-      SPRING_KAFKA_BOOTSTRAP_SERVERS: kafka:9092
+      SPRING_KAFKA_BOOTSTRAP_SERVERS: kafka:29092
+      SCHEMA_REGISTRY_URL: http://schema-registry:8081
     ports:
       - "${EVENT_RELAY_SERVICE_PORT:-8084}:8084"
     healthcheck:
@@ -28,3 +22,7 @@ services:
     networks:
       - trackops-network
     restart: unless-stopped
+
+networks:
+  trackops-network:
+    external: true
