--- a/event-relay-service/build.gradle
+++ b/event-relay-service/build.gradle
@@ -21,6 +21,9 @@ configurations {
 
 repositories {
     mavenCentral()
+    maven {
+        url "https://packages.confluent.io/maven/"
+    }
 }
 
 dependencies {
@@ -30,6 +33,10 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.kafka:spring-kafka'
     implementation 'io.micrometer:micrometer-core'
+    // Confluent Schema Registry
+    implementation 'io.confluent:kafka-avro-serializer:7.6.0'
+    implementation 'io.confluent:kafka-schema-registry-client:7.6.0'
+    implementation 'org.apache.avro:avro:1.11.3'
     implementation 'net.logstash.logback:logstash-logback-encoder:7.4'
     implementation 'ch.qos.logback:logback-classic'
     compileOnly 'org.projectlombok:lombok'
