--- a/event-relay-service/src/main/resources/application.properties
+++ b/event-relay-service/src/main/resources/application.properties
@@ -20,6 +20,13 @@ spring.kafka.producer.acks=all
 spring.kafka.producer.retries=3
 spring.kafka.producer.enable-idempotence=true
 
+# Schema Registry Configuration
+schema.registry.url=http://localhost:8081
+schema.registry.basic.auth.user.info=${SCHEMA_REGISTRY_BASIC_AUTH_USER_INFO:}
+schema.registry.cache.capacity=1000
+schema.registry.auto.register.schemas=true
+schema.registry.compatibility.level=BACKWARD
+
 # Health Check Configuration
 management.endpoints.web.exposure.include=health,info,metrics,prometheus
 management.endpoint.health.show-details=always
