--- a/server/build.gradle
+++ b/server/build.gradle
@@ -21,6 +21,9 @@ configurations {
 
 repositories {
 	mavenCentral()
+	maven {
+		url "https://packages.confluent.io/maven/"
+	}
 }
 
 dependencies {
@@ -33,6 +36,10 @@ dependencies {
 	implementation 'org.springframework.kafka:spring-kafka'
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 	implementation 'org.springframework.boot:spring-boot-starter-cache'
+	// Confluent Schema Registry
+	implementation 'io.confluent:kafka-avro-serializer:7.6.0'
+	implementation 'io.confluent:kafka-schema-registry-client:7.6.0'
+	implementation 'org.apache.avro:avro:1.11.3'
 	implementation 'io.micrometer:micrometer-core'
 	implementation 'net.logstash.logback:logstash-logback-encoder:7.4'
 	implementation 'ch.qos.logback:logback-classic'
