--- a/inventory-service/bin/main/application-docker.properties
+++ b/inventory-service/bin/main/application-docker.properties
@@ -20,13 +20,20 @@ spring.redis.timeout=2000ms
 spring.redis.database=1
 
 # Kafka Configuration
-spring.kafka.bootstrap-servers=kafka:29092
+spring.kafka.bootstrap-servers=trackops-kafka:9092
 spring.kafka.consumer.group-id=inventory-service
 spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+
+# Schema Registry Configuration
+schema.registry.url=http://schema-registry:8081
+schema.registry.basic.auth.user.info=${SCHEMA_REGISTRY_BASIC_AUTH_USER_INFO:}
+schema.registry.cache.capacity=1000
+schema.registry.auto.register.schemas=true
+schema.registry.compatibility.level=BACKWARD
 
 # Inventory Service Configuration
 inventory.service.retry.max-attempts=3
