feat: implemened rate limiting.g.g. Fixes #6

--- a/server/src/main/resources/application-docker.properties
+++ b/server/src/main/resources/application-docker.properties
@@ -45,3 +45,8 @@ management.endpoint.caches.enabled=true
 management.health.defaults.enabled=true
 management.health.db.enabled=true
 management.health.redis.enabled=true
+
+# Rate Limiting Configuration
+app.rate-limit.enabled=true
+app.rate-limit.default-requests-per-hour=1000
+app.rate-limit.burst-capacity=100
