--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -93,3 +93,8 @@ app.cache.ttl.customer=3600
 app.cache.ttl.page=900
 app.cache.warming.enabled=true
 app.cache.invalidation.enabled=true
+
+# Rate Limiting Configuration
+app.rate-limit.enabled=true
+app.rate-limit.default-requests-per-hour=1000
+app.rate-limit.burst-capacity=100
