--- a/event-relay-service/bin/main/application-docker.properties
+++ b/event-relay-service/bin/main/application-docker.properties
@@ -4,7 +4,7 @@ spring.application.name=event-relay-service
 # Database Configuration - Event Relay Database
 # Can be overridden via SPRING_DATASOURCE_URL environment variable
 # For local development without Docker, use: localhost:5434
-spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://postgres-event-relay:5432/trackops_event_relay}
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://trackops-postgres-event-relay:5432/trackops_event_relay}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME:postgres}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:password}
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -32,6 +32,13 @@ spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.Str
 spring.kafka.producer.acks=all
 spring.kafka.producer.retries=3
 spring.kafka.producer.enable-idempotence=true
+
+# Schema Registry Configuration
+schema.registry.url=http://schema-registry:8081
+schema.registry.basic.auth.user.info=${SCHEMA_REGISTRY_BASIC_AUTH_USER_INFO:}
+schema.registry.cache.capacity=1000
+schema.registry.auto.register.schemas=true
+schema.registry.compatibility.level=BACKWARD
 
 # Event Relay Configuration
 event-relay.batch-size=10
