--- a/server/build.gradle
+++ b/server/build.gradle
@@ -43,6 +43,10 @@ dependencies {
 	implementation 'io.micrometer:micrometer-core'
 	implementation 'net.logstash.logback:logstash-logback-encoder:7.4'
 	implementation 'ch.qos.logback:logback-classic'
+	// Bucket4j for rate limiting (Java 21 compatible with JDK 17 artifacts)
+	implementation 'com.bucket4j:bucket4j_jdk17-core:8.10.1'
+	implementation 'com.bucket4j:bucket4j_jdk17-redis-common:8.10.1'
+	implementation 'com.bucket4j:bucket4j_jdk17-lettuce:8.10.1'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
