fix: fixed image creation with new confluence schema registry feature

--- a/docker/event-relay-service.yml
+++ b/docker/event-relay-service.yml
@@ -6,11 +6,11 @@ services:
     container_name: trackops-event-relay-service
     environment:
       SPRING_PROFILES_ACTIVE: docker
-      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres-event-relay:5432/trackops_event_relay
+      SPRING_DATASOURCE_URL: jdbc:postgresql://trackops-postgres-event-relay:5432/trackops_event_relay
       SPRING_DATASOURCE_USERNAME: postgres
       SPRING_DATASOURCE_PASSWORD: password
-      SPRING_KAFKA_BOOTSTRAP_SERVERS: kafka:29092
-      SCHEMA_REGISTRY_URL: http://schema-registry:8081
+      SPRING_KAFKA_BOOTSTRAP_SERVERS: trackops-kafka:9092
+      SCHEMA_REGISTRY_URL: http://trackops-schema-registry:8081
     ports:
       - "${EVENT_RELAY_SERVICE_PORT:-8084}:8084"
     healthcheck:
