--- a/docker/kafka.yml
+++ b/docker/kafka.yml
@@ -1,18 +1,16 @@
-version: '3.8'
-
 services:
   # Kafka Message Broker (KRaft mode - no ZooKeeper required)
   kafka:
-    image: confluentinc/cp-kafka:8.0
+    image: confluentinc/cp-kafka:7.6.0
     container_name: trackops-kafka
     environment:
       # KRaft Configuration
       KAFKA_PROCESS_ROLES: broker,controller
       KAFKA_CONTROLLER_QUORUM_VOTERS: 1@localhost:9093
-      KAFKA_LISTENERS: PLAINTEXT://:9092,CONTROLLER://:9093
+      KAFKA_LISTENERS: PLAINTEXT://:9092,PLAINTEXT_HOST://:29092,CONTROLLER://:9093
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://trackops-kafka:9092,PLAINTEXT_HOST://localhost:9092
       KAFKA_CONTROLLER_LISTENER_NAMES: CONTROLLER
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
       # Node ID (must match the controller quorum voter ID)
       KAFKA_NODE_ID: 1
@@ -36,17 +34,20 @@ services:
       timeout: 10s
       retries: 10
       start_period: 60s
+    networks:
+      - trackops-network
+    restart: unless-stopped
 
   # Confluent Schema Registry
   schema-registry:
-    image: confluentinc/cp-schema-registry:8.0
+    image: confluentinc/cp-schema-registry:7.6.0
     container_name: trackops-schema-registry
     depends_on:
       kafka:
         condition: service_healthy
     environment:
       SCHEMA_REGISTRY_HOST_NAME: schema-registry
-      SCHEMA_REGISTRY_KAFKASTORE_BOOTSTRAP_SERVERS: localhost:9092
+      SCHEMA_REGISTRY_KAFKASTORE_BOOTSTRAP_SERVERS: trackops-kafka:9092
       SCHEMA_REGISTRY_LISTENERS: http://0.0.0.0:8081
       SCHEMA_REGISTRY_KAFKASTORE_TOPIC: _schemas
       SCHEMA_REGISTRY_KAFKASTORE_TOPIC_REPLICATION_FACTOR: 1
@@ -60,6 +61,13 @@ services:
       timeout: 10s
       retries: 10
       start_period: 30s
+    networks:
+      - trackops-network
+    restart: unless-stopped
 
 volumes:
   kafka_data:
+
+networks:
+  trackops-network:
+    external: true
