--- a/docker/redis.yml
+++ b/docker/redis.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   # Redis Cache
   redis:
@@ -15,6 +13,13 @@ services:
       timeout: 3s
       retries: 10
       start_period: 30s
+    networks:
+      - trackops-network
+    restart: unless-stopped
 
 volumes:
   redis_data:
+
+networks:
+  trackops-network:
+    external: true
