--- a/docker/trackops-server.yml
+++ b/docker/trackops-server.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   # TrackOps Spring Boot Application
   trackops-server:
@@ -11,26 +9,22 @@ services:
       - "8081:8081"
     environment:
       SPRING_PROFILES_ACTIVE: docker
-      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/trackops
+      SPRING_DATASOURCE_URL: jdbc:postgresql://trackops-postgres-server:5432/trackops_orders
       SPRING_DATASOURCE_USERNAME: postgres
       SPRING_DATASOURCE_PASSWORD: password
-      SPRING_REDIS_HOST: redis
+      SPRING_REDIS_HOST: trackops-redis
       SPRING_REDIS_PORT: 6379
-      SPRING_KAFKA_BOOTSTRAP_SERVERS: kafka:9092
-    depends_on:
-      postgres:
-        condition: service_healthy
-      redis:
-        condition: service_healthy
-      kafka:
-        condition: service_healthy
-      prometheus:
-        condition: service_healthy
-      grafana:
-        condition: service_healthy
+      SPRING_KAFKA_BOOTSTRAP_SERVERS: trackops-kafka:9092
+    networks:
+      - trackops-network
+    restart: unless-stopped
     healthcheck:
       test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:8081/actuator/health"]
       interval: 30s
       timeout: 10s
       retries: 10
       start_period: 120s
+
+networks:
+  trackops-network:
+    external: true
