--- a/server/src/main/resources/application-docker.properties
+++ b/server/src/main/resources/application-docker.properties
@@ -2,7 +2,7 @@
 spring.application.name=server
 
 # Database Configuration - Server Database
-spring.datasource.url=jdbc:postgresql://postgres-server:5432/trackops_orders
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://trackops-postgres-server:5432/trackops_orders}
 spring.datasource.username=postgres
 spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -14,8 +14,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 
 # Redis Configuration
-spring.redis.host=redis
-spring.redis.port=6379
+spring.redis.host=${SPRING_REDIS_HOST:trackops-redis}
+spring.redis.port=${SPRING_REDIS_PORT:6379}
 spring.redis.timeout=2000ms
 spring.redis.database=0
 
@@ -29,7 +29,7 @@ spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.Strin
 spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
 
 # Schema Registry Configuration
-schema.registry.url=http://schema-registry:8081
+schema.registry.url=${SCHEMA_REGISTRY_URL:http://trackops-schema-registry:8085}
 schema.registry.basic.auth.user.info=${SCHEMA_REGISTRY_BASIC_AUTH_USER_INFO:}
 schema.registry.cache.capacity=1000
 schema.registry.auto.register.schemas=true
