--- a/docker/postgres.yml
+++ b/docker/postgres.yml
@@ -8,6 +8,7 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: password
       PGDATA: /var/lib/postgresql/data/pgdata
+    command: postgres -c wal_level=logical
     ports:
       - "5432:5432"
     volumes:
