--- a/event-relay-service/bin/main/application-docker.properties
+++ b/event-relay-service/bin/main/application-docker.properties
@@ -34,7 +34,7 @@ spring.kafka.producer.retries=3
 spring.kafka.producer.enable-idempotence=true
 
 # Schema Registry Configuration
-schema.registry.url=http://schema-registry:8081
+schema.registry.url=http://trackops-schema-registry:8085
 schema.registry.basic.auth.user.info=${SCHEMA_REGISTRY_BASIC_AUTH_USER_INFO:}
 schema.registry.cache.capacity=1000
 schema.registry.auto.register.schemas=true
