--- a/inventory-service/src/main/resources/application-docker.properties
+++ b/inventory-service/src/main/resources/application-docker.properties
@@ -2,7 +2,7 @@
 spring.application.name=inventory-service
 
 # Database Configuration - Inventory Database
-spring.datasource.url=jdbc:postgresql://postgres-inventory:5432/trackops_inventory
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://trackops-postgres-inventory:5432/trackops_inventory}
 spring.datasource.username=postgres
 spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -14,13 +14,14 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 
 # Redis Configuration
-spring.redis.host=redis
+# Note: Environment variables SPRING_REDIS_HOST and SPRING_REDIS_PORT will override these values
+spring.redis.host=trackops-redis
 spring.redis.port=6379
 spring.redis.timeout=2000ms
 spring.redis.database=1
 
 # Kafka Configuration
-spring.kafka.bootstrap-servers=trackops-kafka:9092
+spring.kafka.bootstrap-servers=${SPRING_KAFKA_BOOTSTRAP_SERVERS:trackops-kafka:9092}
 spring.kafka.consumer.group-id=inventory-service
 spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
@@ -29,7 +30,7 @@ spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.Strin
 spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
 
 # Schema Registry Configuration
-schema.registry.url=http://schema-registry:8081
+schema.registry.url=${SCHEMA_REGISTRY_URL:http://trackops-schema-registry:8085}
 schema.registry.basic.auth.user.info=${SCHEMA_REGISTRY_BASIC_AUTH_USER_INFO:}
 schema.registry.cache.capacity=1000
 schema.registry.auto.register.schemas=true
