refactor: changed DLQ to use postgres table instead of Kafka for better readability and reliability for storage. Fixes Issue #13

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -79,6 +79,9 @@ APP_VERSION=1.0.0
 # Options: 'outbox' (default) or 'debezium'
 app.event-publishing.strategy=debezium
 
+# DLQ Configuration (PostgreSQL dlq_orders table for failed order events)
+app.dlq.max-retries=3
+
 # Debezium Configuration (only used when strategy=debezium)
 app.debezium.enabled=true
 app.debezium.connector-url=http://localhost:8083/connectors
