Fixes issue #19: Implement throttling based on DLQ to prevent disk exhaustion and database crashes

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -86,6 +86,12 @@ app.event-publishing.strategy=debezium
 # DLQ Configuration (PostgreSQL dlq_orders table for failed order events)
 app.dlq.max-retries=3
 
+# DLQ consumer throttling (pause ingestion when DLQ grows to protect DB)
+app.dlq.throttle.enabled=true
+app.dlq.throttle.high-watermark=50000
+app.dlq.throttle.low-watermark=10000
+app.dlq.throttle.check-interval-ms=60000
+
 # Debezium Configuration (only used when strategy=debezium)
 app.debezium.enabled=true
 app.debezium.connector-url=http://localhost:8083/connectors
