Fixes issue #14: Implement Resilience4j Circuit Breaker

--- a/server/build.gradle
+++ b/server/build.gradle
@@ -53,6 +53,10 @@ dependencies {
 	runtimeOnly 'org.postgresql:postgresql'
 	// Flyway for database schema versioning (runs before Hibernate)
 	implementation 'org.flywaydb:flyway-core'
+	// Resilience4j circuit breaker (prevent hammering downstream when it is struggling)
+	implementation 'io.github.resilience4j:resilience4j-core:2.2.0'
+	implementation 'io.github.resilience4j:resilience4j-circuitbreaker:2.2.0'
+	implementation 'io.github.resilience4j:resilience4j-spring-boot3:2.2.0'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.kafka:spring-kafka-test'
