--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -107,6 +107,12 @@ app.cache.ttl.page=900
 app.cache.warming.enabled=true
 app.cache.invalidation.enabled=true
 
+# Resilience4j Circuit Breaker (downstream Kafka / inventory events)
+resilience4j.circuitbreaker.instances.downstreamKafka.failure-rate-threshold=50
+resilience4j.circuitbreaker.instances.downstreamKafka.wait-duration-in-open-state=30s
+resilience4j.circuitbreaker.instances.downstreamKafka.sliding-window-size=10
+resilience4j.circuitbreaker.instances.downstreamKafka.minimum-number-of-calls=5
+
 # Rate Limiting Configuration
 app.rate-limit.enabled=true
 app.rate-limit.default-requests-per-hour=1000
