Closes #26: Implements cache warming and cold start mitigation by seeding Redis cache on application startup, continuous cache revalidation w/ Debezium when an order is updated, random jitter, probabilistic early revalidation for all cached orders, and thread locking for cache updates to avoid thundering herd issues

--- a/server/build.gradle
+++ b/server/build.gradle
@@ -57,6 +57,8 @@ dependencies {
 	implementation 'io.github.resilience4j:resilience4j-core:2.2.0'
 	implementation 'io.github.resilience4j:resilience4j-circuitbreaker:2.2.0'
 	implementation 'io.github.resilience4j:resilience4j-spring-boot3:2.2.0'
+	// Redisson for distributed locking (cache stampeding / thundering herd protection)
+	implementation 'org.redisson:redisson-spring-boot-starter:3.31.0'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.kafka:spring-kafka-test'
