--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -104,8 +104,22 @@ app.cache.ttl.status=1800
 app.cache.ttl.response=1800
 app.cache.ttl.customer=3600
 app.cache.ttl.page=900
+# Additive TTL jitter (seconds): each key gets base TTL + random(0, jitter) so expirations are spread
+app.cache.ttl.jitter-seconds=300
+# Probabilistic early revalidation: randomly refresh entries near expiry (spreads load)
+app.cache.probabilistic-refresh.enabled=true
+app.cache.probabilistic-refresh.window-ratio=0.2
+# Sweep: scan all cached order keys and probabilistically refresh (scalable, traffic-independent)
+app.cache.probabilistic-refresh.sweep-enabled=true
+app.cache.probabilistic-refresh.sweep-interval-ms=300000
+app.cache.probabilistic-refresh.sweep-max-keys-per-run=500
 app.cache.warming.enabled=true
 app.cache.invalidation.enabled=true
+# Pre-warm: number of most recently updated orders to load into Redis on startup
+app.cache.prewarm.size=1000
+# Distributed lock for cache load (stampeding protection)
+app.cache.load-lock.wait-seconds=10
+app.cache.load-lock.lease-seconds=30
 
 # Resilience4j Circuit Breaker (downstream Kafka / inventory events)
 resilience4j.circuitbreaker.instances.downstreamKafka.failure-rate-threshold=50
